added notification and messages sound

--- a/grant-management-app/src/app/UiComponents/feedback/loaders/DotsLoader.module.css
+++ b/grant-management-app/src/app/UiComponents/feedback/loaders/DotsLoader.module.css
@@ -4,7 +4,7 @@
     height: 100vh;
     top: 0;
     left: 0;
-    background-color: #7c5e24; /* Adjust as necessary */
+    background-color: #1E6091; /* Adjust as necessary */
     z-index: 50000;
     display: flex;
     align-items: center;
