added invoice page and api

--- a/grant-management-app/src/app/UiComponents/feedback/loaders/DotsLoader.module.css
+++ b/grant-management-app/src/app/UiComponents/feedback/loaders/DotsLoader.module.css
@@ -5,8 +5,10 @@
     height: 100vh;
     top: 0;
     left: 0;
+    right: 0;
     background-color: #1E6091; /* Adjust as necessary */
     z-index: 50000;
+    justify-content: center;
     display: flex;
     align-items: center;
     transition: display 0s 1s;
